# cloud-infrastructure-collection

./: .gitignore  README.md
.github/actions/: case1.yml
.github/workflows/: case1.yml
case1-FastAPI-CloudRun/: Dockerfile  README.md  main.py  pyproject.toml
case1-FastAPI-CloudRun/commands/: step1-create-gcp-service-account.sh  step2-upload-github-secrets.sh  step3a-start-docker-local.sh  step3b-stop-docker-local.sh  step4-apply-terraform.sh
case1-FastAPI-CloudRun/terraform/: Readme.md
case1-FastAPI-CloudRun/terraform/environments/dev/: main.tf  terraform.tfstate  variables.tf
case1-FastAPI-CloudRun/terraform/modules/cloud_run/: main.tf  variables.tf
case1-FastAPI-CloudRun/test-terraform/: main.tf  terraform.tfstate  terraform.tfvars  variables.tf
