[tool.poetry]
name = "fastapi-cloudrun"
version = "0.1.0"
description = ""
authors = ["Nishida Ryosuke <55966582+24daryo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
